Name: Happstack-FastCGI
Version: 0.1
Copyright: Tupil
Maintainer: ce@tupil.com
License: BSD3
build-type: Simple
build-depends: base>=2.0, cgi >= 3000.0.0, fastcgi >= 3001.0.2, mtl, happstack-server, containers >= 0.2.0, utf8-string >= 0.3.4, bytestring
Synopsis: Happstack extension for use with FastCGI.
Description:
 This library lets you write FastCGI programs with Happstack. This package
  reuses the SimpleHTTP API, making it very easy to port stand-alone HTTP
  programs to FastCGI.
Exposed-Modules: 
   Happstack.Server.FastCGI
Hs-Source-Dirs: src
